--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,13 +14,17 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.sumy.dooraccesscontrolsystem.MainActivity"
+            android:name="com.sumy.dooraccesscontrolsystem.activity.ActivitySplash"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name="MainActivity" >
+        </activity>
+        <activity android:name=".activity.MainMenuActivity" >
         </activity>
     </application>
 
