新建欢迎界面及管理员界面

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,18 +13,22 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <activity android:name="com.sumy.dooraccesscontrolsystem.activity.ActivitySplash" >
+        </activity>
+        <activity android:name="MainActivity" >
+        </activity>
+        <activity android:name=".activity.MainMenuActivity" >
+        </activity>
+        <activity android:name=".activity.AdminActivity" >
+        </activity>
         <activity
-            android:name="com.sumy.dooraccesscontrolsystem.activity.ActivitySplash"
+            android:name=".activity.WelcomeActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name="MainActivity" >
-        </activity>
-        <activity android:name=".activity.MainMenuActivity" >
         </activity>
     </application>
 
