Sqlite数据库操作 雇员签到 签到记录查看

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -37,6 +37,10 @@
         </activity>
         <activity android:name=".activity.InputEmployeeActivity" >
         </activity>
+        <activity android:name=".activity.EmployeeActivity" >
+        </activity>
+        <activity android:name=".activity.ShowCheckInActivity" >
+        </activity>
     </application>
 
 </manifest>
