--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,6 +41,9 @@
         </activity>
         <activity android:name=".activity.ShowCheckInActivity" >
         </activity>
+        <activity android:name=".activity.InputManagerActivity" >
+        </activity>
+        <activity android:name=".activity.ManagerCheckInActivity"></activity>
     </application>
 
 </manifest>
