--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,32 +18,67 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name="com.sumy.dooraccesscontrolsystem.activity.ActivitySplash" >
+        <activity
+            android:name="com.sumy.dooraccesscontrolsystem.activity.ActivitySplash"
+            android:screenOrientation="portrait" >
         </activity>
         <activity android:name="MainActivity" >
         </activity>
-        <activity android:name=".activity.MainMenuActivity" >
+        <activity
+            android:name=".activity.MainMenuActivity"
+            android:screenOrientation="portrait" >
         </activity>
-        <activity android:name=".activity.AdminActivity" >
+        <activity
+            android:name=".activity.AdminActivity"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".activity.WelcomeActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.InputEmployeeActivity" >
+        <activity
+            android:name=".activity.InputEmployeeActivity"
+            android:screenOrientation="portrait" >
         </activity>
-        <activity android:name=".activity.EmployeeActivity" >
+        <activity
+            android:name=".activity.EmployeeActivity"
+            android:screenOrientation="portrait" >
         </activity>
-        <activity android:name=".activity.ShowCheckInActivity" >
+        <activity
+            android:name=".activity.ShowCheckInActivity"
+            android:screenOrientation="portrait" >
         </activity>
-        <activity android:name=".activity.InputManagerActivity" >
+        <activity
+            android:name=".activity.InputManagerActivity"
+            android:screenOrientation="portrait" >
         </activity>
-        <activity android:name=".activity.ManagerCheckInActivity"></activity>
+        <activity
+            android:name=".activity.ManagerCheckInActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".activity.NFCInputActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="text/plain" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.EmployeeNFCEnterActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" >
+        </activity>
     </application>
 
 </manifest>
